# remote

./: LICENSE  README.md  pyproject.toml  test.toml
docker/: Dockerfile
docs/: QUICKSTART.md  README.md  remote.md  transfer-design.md  usage.md
docs/adr/: remote-architecture.md
examples/: README.md  proxy-config.toml
remote/: __init__.py  cli.py  client.py  config.py  constants.py  exceptions.py  system.py  utils.py
remote/adapters/: __init__.py
remote/adapters/cli/: __init__.py  app.py  connection.py  prompts.py  proxy.py  sync.py  transfer.py
remote/adapters/cli/connect/: __init__.py  builtin_commands.py  command_executor.py  config_manager.py  host_parser.py  main.py  shell.py  utils.py
remote/adapters/cli/transfer/: __init__.py  main.py  transfer.py
remote/adapters/config/: __init__.py  loader.py  sync_parser.py
remote/core/: __init__.py  client.py  constants.py  exceptions.py  interfaces.py  logging.py  telemetry.py  utils.py
remote/core/system/: __init__.py  machine.py
remote/domain/: __init__.py
remote/domain/proxy/: __init__.py  models.py  service.py  tunnel.py
remote/domain/sync/: __init__.py  block_sync.py  file_sync.py  models.py  script_exec.py  service.py
remote/domain/transfer/: __init__.py  chunk.py  downloader.py  manifest.py  models.py  parser.py  service.py  uploader.py
remote/infrastructure/: __init__.py
remote/infrastructure/state/: __init__.py  file_store.py  transfer_store.py
remote/proxy/: __init__.py  manager.py  tunnel.py
remote/sync/: __init__.py  block.py  file.py  script.py
(+8 files in other folders)
